modal window toggle özelliği eklendi

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
           <h1 class="first-section-title">
             Effective Solutions for Your Business
           </h1>
-          <button type="button" class="btn first-section-btn">
+          <button
+            onclick="toggle()"
+            type="button"
+            class="btn first-section-btn"
+          >
             Order Service
           </button>
         </div>
@@ -568,9 +572,9 @@
     </footer>
 
     <!-- MODAL WİNDOW -->
-    <div class="modal-window-container">
+    <div class="modal-window-container" id="modal-window">
       <div class="modal-window">
-        <button class="modal-window-btn" type="button">
+        <button onclick="toggle()" class="modal-window-btn" type="button">
           <svg class="x-icon-svg" width="8" height="8">
             <use href="./images/icons-modal.svg#icon-x"></use>
           </svg>
@@ -670,5 +674,7 @@
         </form>
       </div>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
