--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/tablets.css" />
     <title>Homework 6</title>
   </head>
   <body>
@@ -75,35 +76,43 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="section-title">Strategy</h3>
-              <p class="section-p">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
+              <div class="second-section-text-container">
+                <h3 class="section-title">Strategy</h3>
+                <p class="section-p">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </div>
             </li>
+
             <li class="second-section-list-item">
               <div class="second-section-icon-container">
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="section-title">Punctuality</h3>
-              <p class="section-p">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
+              <div class="second-section-text-container">
+                <h3 class="section-title">Punctuality</h3>
+                <p class="section-p">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </div>
             </li>
+
             <li class="second-section-list-item">
               <div class="second-section-icon-container">
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="section-title">Diligence</h3>
-              <p class="section-p">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
+              <div class="second-section-text-container">
+                <h3 class="section-title">Diligence</h3>
+                <p class="section-p">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </div>
             </li>
             <li class="second-section-list-item">
               <div class="second-section-icon-container">
@@ -111,11 +120,13 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="section-title">Technologies</h3>
-              <p class="section-p">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
+              <div class="second-section-text-container">
+                <h3 class="section-title">Technologies</h3>
+                <p class="section-p">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
@@ -499,51 +510,53 @@
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container footer-container">
-        <div class="footer-logo-p-container">
-          <a href="./index.html" class="logo footer-logo"
-            >Web<span class="footer-logo-span">Studio</span></a
-          >
-          <p class="footer-p">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <div class="footer-text-socials-container">
+          <div class="footer-logo-p-container">
+            <a href="./index.html" class="logo footer-logo"
+              >Web<span class="footer-logo-span">Studio</span></a
+            >
+            <p class="footer-p">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
 
-        <div class="footer-socials-container">
-          <p class="footer-socials-title">Social media</p>
-          <ul class="footer-socials-list">
-            <li class="footer-socials-list-item">
-              <a href="" class="footer-socials-link">
-                <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
+          <div class="footer-socials-container">
+            <p class="footer-socials-title">Social media</p>
+            <ul class="footer-socials-list">
+              <li class="footer-socials-list-item">
+                <a href="" class="footer-socials-link">
+                  <svg width="24" height="24" class="footer-socials-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
 
-            <li class="footer-socials-list-item">
-              <a href="" class="footer-socials-link">
-                <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
+              <li class="footer-socials-list-item">
+                <a href="" class="footer-socials-link">
+                  <svg width="24" height="24" class="footer-socials-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
 
-            <li class="footer-socials-list-item">
-              <a href="" class="footer-socials-link">
-                <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons.svg#icon-facebook-svg"></use>
-                </svg>
-              </a>
-            </li>
+              <li class="footer-socials-list-item">
+                <a href="" class="footer-socials-link">
+                  <svg width="24" height="24" class="footer-socials-icon">
+                    <use href="./images/icons.svg#icon-facebook-svg"></use>
+                  </svg>
+                </a>
+              </li>
 
-            <li class="footer-socials-list-item">
-              <a href="" class="footer-socials-link">
-                <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+              <li class="footer-socials-list-item">
+                <a href="" class="footer-socials-link">
+                  <svg width="24" height="24" class="footer-socials-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="footer-form-container">
