everything is done

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/tablets.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
     <title>Homework 6</title>
   </head>
   <body>
@@ -46,6 +47,11 @@
             </li>
           </ul>
         </address>
+        <button onclick="toggleMenu()" type="button" class="hamburger-btn">
+          <svg width="30" height="30" class="hamburger">
+            <use href="./images/hamburgermenu.svg#icon-hamburger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -685,6 +691,75 @@
             SEND
           </button>
         </form>
+      </div>
+    </div>
+
+    <!-- MOBILE HAMBURGER MENU -->
+    <div class="mobile-toggle-menu" id="mobile-toggle-menu">
+      <button
+        onclick="toggleMenu()"
+        class="modal-window-btn mobile-menu-btn"
+        type="button"
+      >
+        <svg class="x-icon-svg" width="8" height="8">
+          <use href="./images/icons-modal.svg#icon-x"></use>
+        </svg>
+      </button>
+
+      <div class="mobile-links-container">
+        <nav class="mobile-nav">
+          <ul class="mobile-nav-list">
+            <li><a href="./index.html" class="mobile-nav-link">Studio</a></li>
+            <li><a href="" class="mobile-nav-link">Portfolio</a></li>
+            <li><a href="" class="mobile-nav-link">Contacts</a></li>
+          </ul>
+        </nav>
+
+        <address class="mobile-address">
+          <ul class="mobile-address-list">
+            <li>
+              <a href="tel:+110001111111" class="mobile-address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="mobile-address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+
+        <ul class="mobile-social-list">
+          <li class="mobile-social">
+            <a href="" class="mobile-socials-link">
+              <svg width="16" height="16" class="team-card-socials-icon">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social">
+            <a href="" class="mobile-socials-link">
+              <svg width="16" height="16" class="team-card-socials-icon">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social">
+            <a href="" class="mobile-socials-link">
+              <svg width="16" height="16" class="team-card-socials-icon">
+                <use href="./images/icons.svg#icon-facebook-svg"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social">
+            <a href="" class="mobile-socials-link">
+              <svg width="16" height="16" class="team-card-socials-icon">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
 
